name:                relational-query-HDBC
version:             0.3.0.0
synopsis:            HDBC instance of relational-query and typed query interface for HDBC
description:         This package contains the HDBC instance of relational-query and
                     the typed query interface for HDBC.
                     Generating Database table definitions and functions for
                     relational-query by reading table and index definitions
                     from Database system catalogs.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino, Shohei Murayama, Shohei Yasutake, Sho KURODA
maintainer:          ex8k.hibino@gmail.com, shohei.murayama@gmail.com, amutake.s@gmail.com, krdlab@gmail.com
copyright:           Copyright (c) 2013 2014 Kei Hibino, Shohei Murayama, Shohei Yasutake, Sho KURODA
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                       Database.HDBC.Record.Persistable
                       Database.HDBC.Record.TH
                       Database.HDBC.Record.Statement
                       Database.HDBC.Record.Query
                       Database.HDBC.Record.Update
                       Database.HDBC.Record.Insert
                       Database.HDBC.Record.InsertQuery
                       Database.HDBC.Record.Delete
                       Database.HDBC.Record.KeyUpdate
                       Database.HDBC.Record
                       Database.HDBC.Query.TH
                       Database.HDBC.SqlValueExtra
                       Database.HDBC.Schema.Driver
                       Database.HDBC.Schema.IBMDB2
                       Database.HDBC.Schema.PostgreSQL
                       Database.HDBC.Schema.SQLServer
                       Database.HDBC.Schema.SQLite3
                       Database.HDBC.Schema.Oracle
                       Database.HDBC.Schema.MySQL

  other-modules:
                       Database.HDBC.Record.InternalTH

  build-depends:         base <5
                       , containers
                       , transformers
                       , convertible
                       , template-haskell
                       , dlist

                       , names-th
                       , persistable-record
                       , relational-query >= 0.6.2
                       , relational-schemas
                       , HDBC >=2
                       , HDBC-session

  hs-source-dirs:      src
  ghc-options:         -Wall

  default-language:    Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
