name:                relational-query-HDBC
version:             0.7.2.1
synopsis:            HDBC instance of relational-query and typed query interface for HDBC
description:         This package contains the HDBC instance of relational-query and
                     the typed query interface for HDBC.
                     .
                     Generating Database table definitions and functions for
                     relational-query by reading table and index definitions
                     from Database system catalogs.
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino, Shohei Murayama, Shohei Yasutake, Sho KURODA
maintainer:          ex8k.hibino@gmail.com, shohei.murayama@gmail.com, amutake.s@gmail.com, krdlab@gmail.com
copyright:           Copyright (c) 2013-2023 Kei Hibino, 2013 Shohei Murayama, 2013 Shohei Yasutake, 2013 Sho KURODA
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:           GHC == 9.6.2
                     , GHC == 9.4.6
                     , GHC == 9.2.8
                     , GHC == 9.0.2
                     , GHC == 8.10.7
                     , GHC == 8.8.1, GHC == 8.8.2
                     , GHC == 8.6.1, GHC == 8.6.2, GHC == 8.6.3, GHC == 8.6.4, GHC == 8.6.5
                     , GHC == 8.4.1, GHC == 8.4.2, GHC == 8.4.3, GHC == 8.4.4
                     , GHC == 8.2.1, GHC == 8.2.2
                     , GHC == 8.0.1, GHC == 8.0.2
                     , GHC == 7.10.1, GHC == 7.10.2, GHC == 7.10.3
                     , GHC == 7.8.1, GHC == 7.8.2, GHC == 7.8.3, GHC == 7.8.4
                     , GHC == 7.6.1, GHC == 7.6.2, GHC == 7.6.3
                     , GHC == 7.4.1, GHC == 7.4.2
extra-source-files:  ChangeLog.md

library
  exposed-modules:
                       Database.HDBC.Record.Persistable
                       Database.HDBC.Record.TH
                       Database.HDBC.Record.Sequence
                       Database.HDBC.Record.Statement
                       Database.HDBC.Record.Query
                       Database.HDBC.Record.Update
                       Database.HDBC.Record.Insert
                       Database.HDBC.Record.InsertQuery
                       Database.HDBC.Record.Delete
                       Database.HDBC.Record.KeyUpdate
                       Database.HDBC.Record
                       Database.HDBC.Query.TH
                       Database.HDBC.SqlValueExtra
                       Database.HDBC.Schema.Driver
                       Database.HDBC.Schema.IBMDB2
                       Database.HDBC.Schema.PostgreSQL
                       Database.HDBC.Schema.SQLServer
                       Database.HDBC.Schema.SQLite3
                       Database.HDBC.Schema.Oracle
                       Database.HDBC.Schema.MySQL

  other-modules:
                       Database.HDBC.Record.InternalTH

  build-depends:         base <5
                       , containers
                       , transformers
                       , convertible
                       , template-haskell
                       , dlist
                       , th-data-compat
                       , product-isomorphic >= 0.0.3

                       , names-th
                       , sql-words
                       , persistable-record >= 0.6
                       , relational-query >= 0.12.2
                       , relational-schemas >= 0.1.7
                       , HDBC >=2
                       , HDBC-session

  hs-source-dirs:      src
  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat
  if impl(ghc >= 8) && impl(ghc < 8.8)
    ghc-options:         -Wnoncanonical-monadfail-instances

  default-language:    Haskell2010

test-suite convertible-iso
  build-depends:         base <5
                       , QuickCheck
                       , quickcheck-simple
                       , convertible
                       , HDBC
                       , relational-query-HDBC
  type:                exitcode-stdio-1.0
  main-is:             convertibleIso.hs
  hs-source-dirs:      test
  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat

  default-language:    Haskell2010

source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
