name:                relational-record-examples
version:             0.3.1.0
synopsis:            Examples of Haskell Relationa Record
description:         Provides examples of Haskell Relational Record
license:             BSD3
license-file:        LICENSE
author:              Kazu Yamamoto <kazu@iij.ad.jp>
                     Shohei Murayama <shohei.murayama@gmail.com>
maintainer:          Shohei Murayama <shohei.murayama@gmail.com>
category:            Database
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:    sql/3.7.1.sh
                       sql/3.7.3.sh
                       sql/3.7.sh
                       sql/4.1.2.sh
                       sql/4.3.2.sh
                       sql/4.3.3a.sh
                       sql/4.3.3b.sh
                       sql/4.3.3c.sh
                       sql/5.1.2a.sh
                       sql/5.1.3.sh
                       sql/5.3a.sh
                       sql/6.4.1a.sh
                       sql/8.1a.sh
                       sql/add.sql
                       sql/sql-memo
                       examples.db

flag binary
  description:         building binary, too
  default:             False

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  exposed-modules:     Database.Relational.Query.SQLite3
                       Database.Record.TH.SQLite3
  build-depends:       base < 5
                     , HDBC
                     , HDBC-session
                     , HDBC-sqlite3
                     , persistable-record >= 0.2
                     , relational-query >= 0.7
                     , relational-query-HDBC >= 0.4
                     , template-haskell
                     -- not link directly but query type map
                     , relational-schemas >= 0.1.3

executable examples
  if flag(binary)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      src
  main-is:             examples.hs
  other-modules:       Account
                       Branch
                       Business
                       Customer
                       Department
                       Employee
                       Individual
                       Officer
                       Product
                       ProductType
                       Transaction
  build-depends:       base < 5
                     , relational-query >= 0.7
                     , relational-record-examples
                     , template-haskell
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall
