name:                relational-record-examples
version:             0.6.0.1
synopsis:            Examples of Haskell Relationa Record
description:         Provides examples of Haskell Relational Record
license:             BSD3
license-file:        LICENSE
author:              Kazu Yamamoto <kazu@iij.ad.jp>
                     Shohei Murayama <shohei.murayama@gmail.com>
maintainer:          Shohei Murayama <shohei.murayama@gmail.com>
category:            Database
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:    sql/3.7.1.sh
                       sql/3.7.3.sh
                       sql/3.7.sh
                       sql/4.1.2.sh
                       sql/4.3.2.sh
                       sql/4.3.3a.sh
                       sql/4.3.3b.sh
                       sql/4.3.3c.sh
                       sql/5.1.2a.sh
                       sql/5.1.3.sh
                       sql/5.3a.sh
                       sql/6.4.1a.sh
                       sql/8.1a.sh
                       sql/add.sql
                       sql/sql-memo
                       examples.db

flag binary
  description:         building binary, too
  default:             True
  manual:              True

library
  hs-source-dirs:      lib
  exposed-modules:
                       Database.Relational.CustomSQLite3
                       Database.Record.TH.SQLite3

  hs-source-dirs:      entity
  exposed-modules:
                       Account
                       Branch
                       Business
                       Customer
                       Department
                       Employee
                       Individual
                       Officer
                       Product
                       ProductType
                       Transaction

  build-depends:       base < 5
                     , HDBC
                     , HDBC-session
                     , HDBC-sqlite3
                     , persistable-record >= 0.6
                     , relational-query >= 0.11.2
                     , relational-query-HDBC >= 0.6.5
                     , template-haskell
                     , relational-schemas >= 0.1.7
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*


  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat
  if impl(ghc >= 8) && impl(ghc < 8.8)
    ghc-options:         -Wnoncanonical-monadfail-instances

  default-language:    Haskell2010

executable examples
  if impl(ghc >= 8.0) && flag(binary)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      mains
  main-is:             examples.hs
  build-depends:       base < 5
                     , product-isomorphic >= 0.0.3
                     , relational-query >= 0.12
                     , relational-record-examples
                     , template-haskell
                     , time
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*

  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat

  default-language:    Haskell2010

executable specialized-examples
  if flag(binary)
    buildable:         True
  else
    buildable:         False
  hs-source-dirs:      mains
  main-is:             specializedExamples.hs
  build-depends:       base < 5
                     , product-isomorphic >= 0.0.3
                     , relational-query >= 0.12
                     , relational-record-examples
                     , template-haskell
                     , time
  if impl(ghc == 7.4.*)
    build-depends:        ghc-prim == 0.2.*

  ghc-options:         -Wall
  if impl(ghc >= 8)
    ghc-options:         -Wcompat

  default-language:    Haskell2010
