name:                relational-record
version:             0.1.5.1
synopsis:            Meta package of Relational Record
description:         Meta package to install Relational Record quickly
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2014-2016 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                     Database.Relational.Query.Documentation

  build-depends:       base <5
                     , relational-query >=0.3
                     , relational-query-HDBC
                     , persistable-types-HDBC-pg

  hs-source-dirs:    src
  ghc-options:       -Wall

  default-language:    Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
