name:                relational-record
version:             0.2.1.2
synopsis:            Meta package of Relational Record
description:         Meta package to install Relational Record quickly
homepage:            http://khibino.github.io/haskell-relational-record/
license:             BSD3
license-file:        LICENSE
author:              Kei Hibino
maintainer:          ex8k.hibino@gmail.com
copyright:           Copyright (c) 2014-2017 Kei Hibino
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
                     Database.Relational.Documentation

  build-depends:       base <5
                     , product-isomorphic >= 0.0.3
                     , persistable-record >= 0.6
                     , relational-query >=0.11
                     , relational-query-HDBC >= 0.6.6
                     , persistable-types-HDBC-pg

  hs-source-dirs:    src
  ghc-options:       -Wall

  default-language:    Haskell2010


source-repository head
  type:       git
  location:   https://github.com/khibino/haskell-relational-record

source-repository head
  type:       mercurial
  location:   https://bitbucket.org/khibino/haskell-relational-record
